--- a/environment.yml
+++ b/environment.yml
@@ -3,146 +3,146 @@ channels:
   - https://conda.anaconda.org/conda-forge
   - defaults
 dependencies:
-  - alabaster=0.7.12=py36_0
-  - argh=0.26.2=py36_0
-  - asn1crypto=1.2.0=py36_0
-  - astroid=2.3.3=py36_0
-  - atomicwrites=1.3.0=py36_1
-  - attrs=19.3.0=py_0
-  - autopep8=1.4.4=py_0
-  - babel=2.7.0=py_0
-  - backcall=0.1.0=py36_0
-  - bcrypt=3.1.7=py36he774522_0
-  - bleach=3.1.0=py36_0
-  - ca-certificates=2019.11.27=0
-  - certifi=2019.11.28=py36_0
-  - cffi=1.13.2=py36h7a1dbc1_0
-  - chardet=3.0.4=py36_1003
-  - cloudpickle=1.2.2=py_0
-  - cryptography=2.8=py36h7a1dbc1_0
-  - decorator=4.4.1=py_0
-  - defusedxml=0.6.0=py_0
-  - diff-match-patch=20181111=py_0
-  - docutils=0.15.2=py36_0
-  - entrypoints=0.3=py36_0
-  - flake8=3.7.9=py36_0
-  - future=0.18.2=py36_0
-  - icu=58.2=ha66f8fd_1
-  - idna=2.8=py36_0
-  - imagesize=1.1.0=py36_0
-  - importlib_metadata=1.1.0=py36_0
-  - intervaltree=3.0.2=py_0
-  - ipykernel=5.1.3=py36h39e3cac_0
-  - ipython=7.10.1=py36h39e3cac_0
-  - ipython_genutils=0.2.0=py36_0
-  - ipywidgets=7.5.1=py_0
-  - isort=4.3.21=py36_0
-  - jedi=0.14.1=py36_0
-  - jinja2=2.10.3=py_0
-  - jpeg=9b=hb83a4c4_2
-  - jsonschema=3.2.0=py36_0
-  - jupyter=1.0.0=py36_7
-  - jupyter_client=5.3.4=py36_0
-  - jupyter_console=6.0.0=py36_0
-  - jupyter_core=4.6.1=py36_0
-  - keyring=19.2.0=py36_0
-  - lazy-object-proxy=1.4.3=py36he774522_0
-  - libpng=1.6.37=h2a8f88b_0
-  - libsodium=1.0.16=h9d3ae62_0
-  - libspatialindex=1.9.3=h33f27b4_0
-  - m2w64-gcc-libgfortran=5.3.0=6
-  - m2w64-gcc-libs=5.3.0=7
-  - m2w64-gcc-libs-core=5.3.0=7
-  - m2w64-gmp=6.1.0=2
-  - m2w64-libwinpthread-git=5.0.0.4634.697f757=2
-  - markupsafe=1.1.1=py36he774522_0
-  - mccabe=0.6.1=py36_1
-  - mistune=0.8.4=py36he774522_0
-  - more-itertools=7.2.0=py36_0
-  - msys2-conda-epoch=20160418=1
-  - nbconvert=5.6.1=py36_0
-  - nbformat=4.4.0=py36_0
-  - numpydoc=0.9.1=py_0
-  - openssl=1.1.1d=he774522_3
-  - packaging=19.2=py_0
-  - pandoc=2.2.3.2=0
-  - pandocfilters=1.4.2=py36_1
-  - paramiko=2.6.0=py36_0
-  - parso=0.5.1=py_0
-  - pathtools=0.1.2=py_1
-  - pexpect=4.7.0=py36_0
-  - pickleshare=0.7.5=py36_0
-  - pip=19.3.1=py36_0
-  - pluggy=0.13.1=py36_0
-  - prometheus_client=0.7.1=py_0
-  - prompt_toolkit=2.0.9=py36_0
-  - psutil=5.6.7=py36he774522_0
-  - pycodestyle=2.5.0=py36_0
-  - pycparser=2.19=py36_0
-  - pydocstyle=4.0.1=py_0
-  - pyflakes=2.1.1=py36_0
-  - pygments=2.5.2=py_0
-  - pylint=2.4.4=py36_0
-  - pympler=0.7=py_0
-  - pynacl=1.3.0=py36h62dcd97_0
-  - pyopenssl=19.1.0=py36_0
-  - pyparsing=2.4.5=py_0
-  - pyqt=5.9.2=py36h6538335_2
-  - pyrsistent=0.15.6=py36he774522_0
-  - pysocks=1.7.1=py36_0
-  - python=3.6.9=h5500b2f_0
-  - python-dateutil=2.8.1=py_0
-  - python-jsonrpc-server=0.3.2=py_0
-  - python-language-server=0.31.2=py36_0
-  - pytz=2019.3=py_0
-  - pywin32=223=py36hfa6e2cd_1
-  - pywin32-ctypes=0.2.0=py36_0
-  - pywinpty=0.5.7=py36_0
-  - pyyaml=5.2=py36he774522_0
-  - pyzmq=18.1.0=py36ha925a31_0
-  - qdarkstyle=2.7=py_0
-  - qt=5.9.7=vc14h73c81de_0
-  - qtawesome=0.6.0=py_0
-  - qtconsole=4.6.0=py_0
-  - qtpy=1.9.0=py_0
-  - requests=2.22.0=py36_1
-  - rope=0.14.0=py_0
-  - rtree=0.8.3=py36_0
-  - setuptools=42.0.2=py36_0
-  - sip=4.19.8=py36h6538335_0
-  - snowballstemmer=2.0.0=py_0
-  - sortedcontainers=2.1.0=py36_0
-  - sphinx=2.2.2=py_0
-  - sphinxcontrib-applehelp=1.0.1=py_0
-  - sphinxcontrib-devhelp=1.0.1=py_0
-  - sphinxcontrib-htmlhelp=1.0.2=py_0
-  - sphinxcontrib-jsmath=1.0.1=py_0
-  - sphinxcontrib-qthelp=1.0.2=py_0
-  - sphinxcontrib-serializinghtml=1.1.3=py_0
-  - spyder-kernels=1.8.1=py36_0
-  - sqlite=3.30.1=he774522_0
-  - testpath=0.4.4=py_0
-  - tornado=4.5.2=py36h57f6048_0
-  - traitlets=4.3.3=py36_0
-  - typed-ast=1.4.0=py36he774522_0
-  - ujson=1.35=py36hfa6e2cd_0
-  - urllib3=1.25.7=py36_0
-  - vc=14.1=h0510ff6_4
-  - vs2015_runtime=14.16.27012=hf0eaf9b_0
-  - watchdog=0.9.0=py36_1
-  - wcwidth=0.1.7=py36_0
-  - webencodings=0.5.1=py36_1
-  - wheel=0.33.6=py36_0
-  - widgetsnbextension=3.5.1=py36_0
-  - win_inet_pton=1.1.0=py36_0
-  - wincertstore=0.2=py36h7fe50ca_0
-  - winpty=0.4.3=4
-  - wrapt=1.11.2=py36he774522_0
-  - yaml=0.1.7=hc54c509_2
-  - yapf=0.28.0=py_0
-  - zeromq=4.3.1=h33f27b4_3
-  - zipp=0.6.0=py_0
-  - zlib=1.2.11=h62dcd97_3
+  - alabaster=0.7.12
+  - argh=0.26.2
+  - asn1crypto=1.2.0
+  - astroid=2.3.3
+  - atomicwrites=1.3.0
+  - attrs=19.3.0
+  - autopep8=1.4.4
+  - babel=2.7.0
+  - backcall=0.1.0
+  - bcrypt=3.1.7
+  - bleach=3.1.0
+  - ca-certificates=2019.11.27
+  - certifi=2019.11.28
+  - cffi=1.13.2
+  - chardet=3.0.4
+  - cloudpickle=1.2.2
+  - cryptography=2.8
+  - decorator=4.4.1
+  - defusedxml=0.6.0
+  - diff-match-patch=20181111
+  - docutils=0.15.2
+  - entrypoints=0.3
+  - flake8=3.7.9
+  - future=0.18.2
+  - icu=58.2
+  - idna=2.8
+  - imagesize=1.1.0
+  - importlib_metadata=1.1.0
+  - intervaltree=3.0.2
+  - ipykernel=5.1.3
+  - ipython=7.10.1
+  - ipython_genutils=0.2.0
+  - ipywidgets=7.5.1
+  - isort=4.3.21
+  - jedi=0.14.1
+  - jinja2=2.10.3
+  - jpeg=9b
+  - jsonschema=3.2.0
+  - jupyter=1.0.0
+  - jupyter_client=5.3.4
+  - jupyter_console=6.0.0
+  - jupyter_core=4.6.1
+  - keyring=19.2.0
+  - lazy-object-proxy=1.4.3
+  - libpng=1.6.37
+  - libsodium=1.0.16
+  - libspatialindex=1.9.3
+  - m2w64-gcc-libgfortran=5.3.0
+  - m2w64-gcc-libs=5.3.0
+  - m2w64-gcc-libs-core=5.3.0
+  - m2w64-gmp=6.1.0
+  - m2w64-libwinpthread-git=5.0.0.4634.697f757
+  - markupsafe=1.1.1
+  - mccabe=0.6.1
+  - mistune=0.8.4
+  - more-itertools=7.2.0
+  - msys2-conda-epoch=20160418
+  - nbconvert=5.6.1
+  - nbformat=4.4.0
+  - numpydoc=0.9.1
+  - openssl=1.1.1d
+  - packaging=19.2
+  - pandoc=2.2.3.2
+  - pandocfilters=1.4.2
+  - paramiko=2.6.0
+  - parso=0.5.1
+  - pathtools=0.1.2
+  - pexpect=4.7.0
+  - pickleshare=0.7.5
+  - pip=19.3.1
+  - pluggy=0.13.1
+  - prometheus_client=0.7.1
+  - prompt_toolkit=2.0.9
+  - psutil=5.6.7
+  - pycodestyle=2.5.0
+  - pycparser=2.19
+  - pydocstyle=4.0.1
+  - pyflakes=2.1.1
+  - pygments=2.5.2
+  - pylint=2.4.4
+  - pympler=0.7
+  - pynacl=1.3.0
+  - pyopenssl=19.1.0
+  - pyparsing=2.4.5
+  - pyqt=5.9.2
+  - pyrsistent=0.15.6
+  - pysocks=1.7.1
+  - python=3.6.9
+  - python-dateutil=2.8.1
+  - python-jsonrpc-server=0.3.2
+  - python-language-server=0.31.2
+  - pytz=2019.3
+  - pywin32=223
+  - pywin32-ctypes=0.2.0
+  - pywinpty=0.5.7
+  - pyyaml=5.2
+  - pyzmq=18.1.0
+  - qdarkstyle=2.7
+  - qt=5.9.7
+  - qtawesome=0.6.0
+  - qtconsole=4.6.0
+  - qtpy=1.9.0
+  - requests=2.22.0
+  - rope=0.14.0
+  - rtree=0.8.3
+  - setuptools=42.0.2
+  - sip=4.19.8
+  - snowballstemmer=2.0.0
+  - sortedcontainers=2.1.0
+  - sphinx=2.2.2
+  - sphinxcontrib-applehelp=1.0.1
+  - sphinxcontrib-devhelp=1.0.1
+  - sphinxcontrib-htmlhelp=1.0.2
+  - sphinxcontrib-jsmath=1.0.1
+  - sphinxcontrib-qthelp=1.0.2
+  - sphinxcontrib-serializinghtml=1.1.3
+  - spyder-kernels=1.8.1
+  - sqlite=3.30.1
+  - testpath=0.4.4
+  - tornado=4.5.2
+  - traitlets=4.3.3
+  - typed-ast=1.4.0
+  - ujson=1.35
+  - urllib3=1.25.7
+  - vc=14.1
+  - vs2015_runtime=14.16.27012
+  - watchdog=0.9.0
+  - wcwidth=0.1.7
+  - webencodings=0.5.1
+  - wheel=0.33.6
+  - widgetsnbextension=3.5.1
+  - win_inet_pton=1.1.0
+  - wincertstore=0.2
+  - winpty=0.4.3
+  - wrapt=1.11.2
+  - yaml=0.1.7
+  - yapf=0.28.0
+  - zeromq=4.3.1
+  - zipp=0.6.0
+  - zlib=1.2.11
   - pip:
     - bluesky==1.5.5
     - boltons==19.3.0
