--- a/environment.yml
+++ b/environment.yml
@@ -3,206 +3,129 @@ channels:
   - https://conda.anaconda.org/conda-forge
   - defaults
 dependencies:
-  - alabaster=0.7.12
-  - argh=0.26.2
-  - asn1crypto=1.2.0
-  - astroid=2.3.3
-  - atomicwrites=1.3.0
-  - attrs=19.3.0
-  - autopep8=1.4.4
-  - babel=2.7.0
-  - backcall=0.1.0
-  - bcrypt=3.1.7
-  - bleach=3.1.0
-  - ca-certificates=2019.11.27
-  - certifi=2019.11.28
-  - cffi=1.13.2
-  - chardet=3.0.4
-  - cloudpickle=1.2.2
-  - cryptography=2.8
-  - decorator=4.4.1
-  - defusedxml=0.6.0
-  - diff-match-patch=20181111
-  - docutils=0.15.2
-  - entrypoints=0.3
-  - flake8=3.7.9
-  - future=0.18.2
-  - icu=58.2
-  - idna=2.8
-  - imagesize=1.1.0
-  - importlib_metadata=1.1.0
-  - intervaltree=3.0.2
-  - ipykernel=5.1.3
-  - ipython=7.10.1
-  - ipython_genutils=0.2.0
-  - ipywidgets=7.5.1
-  - isort=4.3.21
-  - jedi=0.14.1
-  - jinja2=2.10.3
-  - jpeg=9b
-  - jsonschema=3.2.0
-  - jupyter=1.0.0
-  - jupyter_client=5.3.4
-  - jupyter_console=6.0.0
-  - jupyter_core=4.6.1
-  - keyring=19.2.0
-  - lazy-object-proxy=1.4.3
-  - libpng=1.6.37
-  - libsodium=1.0.16
-  - libspatialindex=1.9.3
-  - m2w64-gcc-libgfortran=5.3.0
-  - m2w64-gcc-libs=5.3.0
-  - m2w64-gcc-libs-core=5.3.0
-  - m2w64-gmp=6.1.0
-  - m2w64-libwinpthread-git=5.0.0.4634.697f757
-  - markupsafe=1.1.1
-  - mccabe=0.6.1
-  - mistune=0.8.4
-  - more-itertools=7.2.0
-  - msys2-conda-epoch=20160418
-  - nbconvert=5.6.1
-  - nbformat=4.4.0
-  - numpydoc=0.9.1
-  - openssl=1.1.1d
-  - packaging=19.2
-  - pandoc=2.2.3.2
-  - pandocfilters=1.4.2
-  - paramiko=2.6.0
-  - parso=0.5.1
-  - pathtools=0.1.2
-  - pexpect=4.7.0
-  - pickleshare=0.7.5
-  - pip=19.3.1
-  - pluggy=0.13.1
-  - prometheus_client=0.7.1
-  - prompt_toolkit=2.0.9
-  - psutil=5.6.7
-  - pycodestyle=2.5.0
-  - pycparser=2.19
-  - pydocstyle=4.0.1
-  - pyflakes=2.1.1
-  - pygments=2.5.2
-  - pylint=2.4.4
-  - pympler=0.7
-  - pynacl=1.3.0
-  - pyopenssl=19.1.0
-  - pyparsing=2.4.5
-  - pyqt=5.9.2
-  - pyrsistent=0.15.6
-  - pysocks=1.7.1
-  - python=3.6.9
-  - python-dateutil=2.8.1
-  - python-jsonrpc-server=0.3.2
-  - python-language-server=0.31.2
-  - pytz=2019.3
-  - pywin32=223
-  - pywin32-ctypes=0.2.0
-  - pywinpty=0.5.7
-  - pyyaml=5.2
-  - pyzmq=18.1.0
-  - qdarkstyle=2.7
-  - qt=5.9.7
-  - qtawesome=0.6.0
-  - qtconsole=4.6.0
-  - qtpy=1.9.0
-  - requests=2.22.0
-  - rope=0.14.0
-  - rtree=0.8.3
-  - setuptools=42.0.2
-  - sip=4.19.8
-  - snowballstemmer=2.0.0
-  - sortedcontainers=2.1.0
-  - sphinx=2.2.2
-  - sphinxcontrib-applehelp=1.0.1
-  - sphinxcontrib-devhelp=1.0.1
-  - sphinxcontrib-htmlhelp=1.0.2
-  - sphinxcontrib-jsmath=1.0.1
-  - sphinxcontrib-qthelp=1.0.2
-  - sphinxcontrib-serializinghtml=1.1.3
-  - spyder-kernels=1.8.1
-  - sqlite=3.30.1
-  - testpath=0.4.4
-  - tornado=4.5.2
-  - traitlets=4.3.3
-  - typed-ast=1.4.0
-  - ujson=1.35
-  - urllib3=1.25.7
-  - vc=14.1
-  - vs2015_runtime=14.16.27012
-  - watchdog=0.9.0
-  - wcwidth=0.1.7
-  - webencodings=0.5.1
-  - wheel=0.33.6
-  - widgetsnbextension=3.5.1
-  - win_inet_pton=1.1.0
-  - wincertstore=0.2
-  - winpty=0.4.3
-  - wrapt=1.11.2
-  - yaml=0.1.7
-  - yapf=0.28.0
-  - zeromq=4.3.1
-  - zipp=0.6.0
-  - zlib=1.2.11
-  - pip:
-    - bluesky==1.5.5
-    - boltons==19.3.0
-    - caproto==0.4.2
-    - colorama==0.4.1
-    - cycler==0.10.0
-    - databroker==0.13.3
-    - dataclasses==0.7
-    - doct==1.0.5
-    - event-model==1.12.0
-    - heapdict==1.0.1
-    - historydict==1.2.3
-    - humanize==0.5.1
-    - imagecodecs==2019.12.16
-    - ipympl==0.4.0
-    - joblib==0.14.1
-    - jupyter-console==6.0.0
-    - kiwisolver==1.1.0
-    - matminer==0.6.2
-    - matplotlib==3.1.2
-    - mongoquery==1.3.5
-    - monty==3.0.2
-    - mpmath==1.1.0
-    - msgpack==0.6.2
-    - msgpack-numpy==0.4.4.3
-    - networkx==2.4
-    - notebook==6.0.2
-    - numpy==1.17.3
-    - ophyd==1.3.3
-    - palettable==3.3.0
-    - pandas==0.25.3
-    - pims==0.4.1
-    - pint==0.9
-    - plotly==4.4.1
-    - prettytable==0.7.2
-    - prompt-toolkit==2.0.10
-    - pydispatcher==2.0.5
-    - pyepics==3.4.0
-    - pymatgen==2019.12.3
-    - pymongo==3.10.0
-    - pyqt5==5.14.0
-    - pyqt5-sip==12.7.0
-    - pyresttable==2020.0.2
-    - retrying==1.3.3
-    - ruamel-yaml==0.16.5
-    - ruamel-yaml-clib==0.2.0
-    - scikit-learn==0.22
-    - scipy==1.4.1
-    - send2trash==1.5.0
-    - six==1.12.0
-    - slicerator==1.0.0
-    - spglib==1.14.1.post0
-    - super-state-machine==2.0.2
-    - sympy==1.5
-    - tabulate==0.8.6
-    - terminado==0.8.3
-    - tifffile==2019.7.26.2
-    - toolz==0.10.0
-    - tqdm==4.37.0
-    - tzlocal==2.0.0
-    - zict==1.0.0
+  - rtree==0.8.3=py36_0
+  - docutils==0.15.2=py36_0
+  - markupsafe==1.1.1=py36he774522_0
+  - pyzmq==18.1.0=py36ha925a31_0
+  - pluggy==0.13.1=py36_0
+  - pywin32==223=py36hfa6e2cd_1
+  - pyopenssl
+  - ipykernel
+  - rope==0.14.0=py_0
+  - yapf==0.28.0=py_0
+  - libsodium==1.0.16=h9d3ae62_0
+  - sortedcontainers==2.1.0=py36_0
+  - imagesize==1.1.0=py36_0
+  - qt==5.9.7=vc14h73c81de_0
+  - intervaltree==3.0.2=py_0
+  - isort==4.3.21=py36_0
+  - nbformat
+  - jpeg==9b=hb83a4c4_2
+  - ujson==1.35=py36hfa6e2cd_0
+  - pygments==2.5.2=py_0
+  - diff-match-patch==20181111=py_0
+  - sphinxcontrib-qthelp==1.0.2=py_0
+  - prompt_toolkit
+  - libspatialindex==1.9.3=h33f27b4_0
+  - traitlets
+  - ca-certificates
+  - win_inet_pton==1.1.0=py36_0
+  - requests
+  - pysocks==1.7.1=py36_0
+  - openssl
+  - wrapt==1.11.2=py36he774522_0
+  - paramiko
+  - zipp==0.6.0=py_0
+  - importlib_metadata==1.1.0=py36_0
+  - cloudpickle==1.2.2=py_0
+  - mccabe==0.6.1=py36_1
+  - sphinxcontrib-htmlhelp==1.0.2=py_0
+  - lazy-object-proxy==1.4.3=py36he774522_0
+  - future==0.18.2=py36_0
+  - pytz==2019.3=py_0
+  - idna==2.8=py36_0
+  - icu==58.2=ha66f8fd_1
+  - astroid
+  - cryptography
+  - psutil==5.6.7=py36he774522_0
+  - parso==0.5.1=py_0
+  - typed-ast==1.4.0=py36he774522_0
+  - pyparsing==2.4.5=py_0
+  - pylint
+  - tornado==4.5.2=py36h57f6048_0
+  - python-jsonrpc-server==0.3.2=py_0
+  - vs2015_runtime==14.16.27012=hf0eaf9b_0
+  - python-dateutil
+  - sphinxcontrib-serializinghtml==1.1.3=py_0
+  - pyrsistent
+  - more-itertools==7.2.0=py36_0
+  - babel==2.7.0=py_0
+  - sip==4.19.8=py36h6538335_0
+  - sphinx
+  - attrs==19.3.0=py_0
+  - jedi==0.14.1=py36_0
+  - pympler==0.7=py_0
+  - jsonschema
+  - sphinxcontrib-devhelp==1.0.1=py_0
+  - decorator==4.4.1=py_0
+  - setuptools==42.0.2=py36_0
+  - vc==14.1=h0510ff6_4
+  - asn1crypto==1.2.0=py36_0
+  - mistune==0.8.4=py36he774522_0
+  - wheel==0.33.6=py36_0
+  - chardet==3.0.4=py36_1003
+  - flake8==3.7.9=py36_0
+  - wincertstore==0.2=py36h7fe50ca_0
+  - bcrypt
+  - alabaster==0.7.12=py36_0
+  - snowballstemmer==2.0.0=py_0
+  - watchdog==0.9.0=py36_1
+  - keyring==19.2.0=py36_0
+  - pandocfilters==1.4.2=py36_1
+  - jinja2==2.10.3=py_0
+  - pydocstyle==4.0.1=py_0
+  - cffi==1.13.2=py36h7a1dbc1_0
+  - testpath==0.4.4=py_0
+  - pycparser==2.19=py36_0
+  - pyqt==5.9.2=py36h6538335_2
+  - autopep8==1.4.4=py_0
+  - python==3.6.9=h5500b2f_0
+  - sqlite==3.30.1=he774522_0
+  - urllib3
+  - python-language-server
+  - yaml==0.1.7=hc54c509_2
+  - numpydoc
+  - nbconvert
+  - jupyter_core
+  - jupyter_client
+  - argh==0.26.2=py36_0
+  - pyflakes==2.1.1=py36_0
+  - certifi
+  - pynacl
+  - sphinxcontrib-applehelp==1.0.1=py_0
+  - pexpect==4.7.0=py36_0
+  - packaging
+  - defusedxml==0.6.0=py_0
+  - pathtools==0.1.2=py_1
+  - libpng==1.6.37=h2a8f88b_0
+  - ipython
+  - entrypoints==0.3=py36_0
+  - webencodings==0.5.1=py36_1
+  - zeromq==4.3.1=h33f27b4_3
+  - qtpy==1.9.0=py_0
+  - bleach
+  - pywin32-ctypes==0.2.0=py36_0
+  - pycodestyle==2.5.0=py36_0
+  - sphinxcontrib-jsmath==1.0.1=py_0
+  - spyder-kernels
+  - ipython_genutils==0.2.0=py36_0
+  - pip==19.3.1=py36_0
+  - atomicwrites==1.3.0=py36_1
+  - qtconsole
+  - qdarkstyle==2.7=py_0
+  - qtawesome
+  - pandoc==2.2.3.2=0
+  - zlib==1.2.11=h62dcd97_3
+  - jupyter
 prefix: C:\Users\roberttk\.conda\envs\bst2
 
